styles.css
a {
  text-decoration: none;
}

footer {
  display: flex;
  text-decoration: none;
  justify-content: space-around;
  width: 1050px;
}

footer a {
  color: #666;
  font-size: 10.5px;
}

@font-face {
  font-family: myFirstFont;
  src: url(sansation_light.woff);
}

body {
  color: #333;
}

#mainnav {
  align-items: center;
  display: grid;
  font-family: "NYTFranklin", sans-serif;
  grid-gap: 5px;
  grid-template-columns: repeat(100, 1fr);
  grid-template-rows: 1fr;
  max-height: 36px;
  padding: 0 0 2px 0;
  margin: 4px 0 0 -2px;
  width: 1351px;
}

nav a {
  text-decoration: none;
  grid-column: 11/16;
}

nav img {
  align-self: center;
  grid-column: 43/94;
}

nav > * {
  border: 0;
}

a:hover {
  cursor: pointer;
}

/* ARTICLE */

.container {
  height: auto;
  width: 100%;
  display: grid;
  grid-template-columns: 1px 1400px 1px;
  grid-gap: 10px;
}

.article_picture {
  grid-column: 1/4;
  padding-bottom: 30px;
}

article {
  grid-column: 2/3;
  display: grid;
  grid-gap: 15px;
}

#title {
  grid-column: 2/3;
  font-size: 40px;
  color: rgb(18, 18, 18);
  font-style: italic;
  font-weight: 700;
  font-family: "NYTCheltenham", sans-serif;
  justify-self: start;
  align-self: end;
  padding-top: 40px;
  padding-bottom: 10px;
}

.main_text {
  margin-left: 100px;
}

#main_picture {
  grid-column: 1/4;
  margin-left: 100px;
  margin-right: 0;
  max-width: 945px;
  height: 531px;
}

#main_pic_footer {
  display: grid;
  grid-column: 1/3;
  font-size: 0.9375rem;
  max-height: 37px;
  line-height: 1.25rem;
  margin: 10px 20px 50px 100px;
  font-weight: 400;
  font-family: "NYTImperial", sans-serif;
  color: rgb(102, 102, 102);
  max-width: 702px;
}

#main_pf_span {
  color: #888;
  letter-spacing: 0.01em;
  font-family: "NYTImperial", sans-serif;
  font-size: 14px;
  margin-left: 0;
  text-align: left;
  width: 712px;
}

#header_text01 {
  grid-column: 2/3;
  width: 600px;
}

#header_date_text01 {
  color: rgb(0, 0, 0);
  display: inline-block;
  font-family: "NYTFranklin", sans-serif;
  font-size: 0.8125rem;
  font-weight: 400;
  line-height: 1rem;
  margin: 0;
}

#header_icons_text01 {
  float: right;
}

.text_01 {
  grid-column: 2/3;
  font-family: "NYTImperial", sans-serif;
  font-size: 21.5px;
  font-weight: 400;
  color: #333;
  line-height: 1.875rem;
  margin-bottom: 0.9375rem;
  width: 600px;
}

.text_01 p {
  margin-bottom: 15px;
}

.text_01 hr {
  width: 72px;
  border: 1px solid rgb(204, 204, 204);
}

.second_title {
  grid-column: 2/3;
  font-size: 20px;
  font-weight: 700;
}

.ad_01 {
  text-align: center;
  font-size: 15px;
  font-weight: 700;
  line-height: 1.75rem;
  font-family: "NYTFranklin Bold", sans-serif;
  color: #333;
}

.text_01_link {
  color: rgb(50, 104, 145);
  text-decoration: underline;
}

#link_ad_01 {
  text-decoration: none;
  color: rgb(50, 104, 145);
}

.editor_top {
  grid-column: 3/4;
  grid-row: 3/9;
  margin: auto;
  margin-left: 0;
}

.editor_top img {
  height: 75px;
  width: 75px;
}

.editor_titles {
  color: rgb(51, 51, 51);
  font-family: "NYTCheltenham", sans-serif;
  font-size: 14px;
  font-weight: 500;
  float: right;
  width: 110px;
  margin-left: 10px;
}

.editortopgrid {
  display: grid;
  grid-template-areas:
    "top top"
    "edt1 edt1"
    "edt2 edt2"
    "edt3 edt3";
}

.editortopgridt {
  border-bottom: 1px solid rgb(226, 226, 226);
  color: rgb(0, 0, 0);
  font-family: "NYTFranklin Bold", sans-serif;
  font-size: 14px;
  grid-area: top;
  letter-spacing: 0.02em;
  line-height: 14px;
  margin: 0 0 15px 0;
  max-width: 200px;
  padding-bottom: 12px;
}

.editor_cell01 {
  grid-area: edt1;
}

.editor_cell02 {
  display: grid;
  grid-area: edt2;
  grid-auto-flow: row;
}

.editor_cell03 {
  display: grid;
  grid-area: edt3;
  grid-auto-flow: row;
}

.cell {
  align-items: center;
  display: grid;
  grid-template-columns: 3fr 5fr;
  grid-template-areas: "a b";
}

.second_picture {
  grid-column: 1/4;
  display: grid;
  grid-template-columns: auto 720px auto;
  grid-template-areas:
    "column1 img2 column2"
    "column1 footer2 column2";
}

.second_picture p {
  grid-area: footer2;
  font-family: "NYTImperial", sans-serif;
  font-size: 15px;
  line-height: 20px;
  font-weight: 400;
  color: rgb(102, 102, 102);
  margin-right: 10px;
  vertical-align: baseline;
}

.second_picture img {
  grid-area: img2;
  max-width: 720px;
}

.more img,
.editor img {
  height: 181.75px;
  width: 272.633px;
}

.moreinfo figure img {
  width: 272px;
}

.editor_cell01 .cell01 a img {
  grid-area: a;
}

.cell a {
  height: 70px;
  text-decoration: none;
}

.cell p {
  font-family: "nyt-cheltenham-sh-400-normal", sans-serif;
  grid-area: b;
}

.cell p:hover {
  text-decoration: underline;
}

.theoryofinflation {
  grid-column: 1/4;
  width: 945px;
}

#theory_picture {
  width: 945px;
  height: 576px;
}

.theory_box {
  grid-column: 1/4;
  display: grid;
  grid-template-columns: 0 repeat(4, 1fr) 0;
  grid-template-areas:
    "column1 title title title title column2"
    "column1 title2 title2 title2 title2 column2"
    "column1 cells cells cells cells column2"
    "column1 cells cells cells cells column2"
    "column1 footer footer footer footer column2";
  margin-left: 100px;
  width: 945px;
}

.theory_grid {
  grid-area: cells;
  display: grid;
  height: 576px;
  grid-gap: 10px;
  grid-template-columns: repeat(4, 1fr);
  background-repeat: no-repeat;
  background-image: url("https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-945.png");
  background-size: 945px 576px;
  font-family: "NYTFranklin Light", sans-serif;
  width: 945px;
}

.theory_cells strong {
  color: #000;
  font-family: "NYTFranklin Bold", sans-serif;
  font-weight: bold;
  margin-right: 7px;
}

#title_theory {
  grid-area: title;
  font-size: 20px;
  font-weight: 700;
  line-height: 24px;
  margin-bottom: 2px;
  color: rgb(0, 0, 0);
  padding: 0;
}
/* ... */

